--- a/Bet.PI/src/assets/estilos/estilos_basicos.css
+++ b/Bet.PI/src/assets/estilos/estilos_basicos.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .bg-primary-b{
     background-color: #282828;
     color: #FFF;
@@ -13,6 +19,10 @@
     color: #282828;
 }
 
+.bg-alternative-b{
+    background-color: #006149;
+    color: #FBE219;
+}
 .btn-primary-b{
     background-color: #FBE219;
     color: #282828;
@@ -82,4 +92,14 @@
 .paragrafo{
     color: #FFF;
     font-size: 0.8em;
-   }
+    text-align: justify;
+
+}
+
+.paragrafo-type-b{
+    color: #FFF;
+    font-size: 1em;
+    line-height: 1.5em;
+    text-align: justify;
+}
+
