--- a/Bet.PI/src/assets/styles.css
+++ b/Bet.PI/src/assets/styles.css
@@ -10,6 +10,10 @@
     /* box-shadow: 1px 1px 1px red, -1px -1px 1px blue; */
 }
 
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
 a {
     text-decoration: none !important;
     color: var(--primary-color);
