Tela de cadastro feita, alteração do menu.ts para incluir a rota cadastro no menu, bem como a própria criação da rota.

--- a/Bet.PI/src/assets/estilos/estilos_basicos.css
+++ b/Bet.PI/src/assets/estilos/estilos_basicos.css
@@ -69,11 +69,14 @@
 .link-color-primary{
     color: #FBE219;
     font-size: 14px;
+    transition: 0.7s all;
 }
 
 .link-color-primary:hover{
     color: #282828;
     text-decoration: underline;
+    transition: 0.7s all;
+
 }
 
 
